--- a/src/content/graphos/cloud-routing/dedicated/index.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/index.mdx
@@ -6,7 +6,7 @@ description: Learn about Apollo's dedicated cloud routing for GraphQL APIs inclu
 
 <DedicatedPreview />
 
-GraphOS _Cloud Dedicated_ is the Apollo offering that lets you run a cloud router on dedicated, pre-provisioned infrastructure that you control and scale. It gives you access to a fully managed and monitored fleet of Apollo Routers.
+GraphOS _Cloud Dedicated_ is the Apollo offering that lets you run a cloud router on dedicated, pre-provisioned infrastructure that you control and scale. It gives you access to a fully managed and monitored fleet of GraphOS Routers.
 
 The Cloud Dedicated approach lets you implement and scale your supergraph without managing any additional infrastructure. Tailored for teams handling production-grade workloads, Cloud Dedicated offers additional control over performance and security.
 
@@ -18,7 +18,7 @@ Go the [Cloud Dedicated quickstart](./quickstart) to get started.
 
 ## Runs on AWS
 
-Cloud Dedicated runs a fleet of Apollo Routers in the AWS region of your choice. The following regions are currently available:
+Cloud Dedicated runs a fleet of GraphOS Routers in the AWS region of your choice. The following regions are currently available:
 
 - us-east-1
 - us-east-2
