--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -171,7 +171,7 @@ If a [composition check](#composition-checks) succeeds, GraphOS then validates s
 
 <Note>
 
-If you use the Apollo Router to [report operation metrics](../metrics/sending-operation-metrics), you can configure extended reference reporting for more accurate operation checks. [Learn more.](/router/configuration/overview/#extended-reference-reporting)
+If you use the GraphOS Router to [report operation metrics](../metrics/sending-operation-metrics), you can configure extended reference reporting for more accurate operation checks. [Learn more.](/router/configuration/overview/#extended-reference-reporting)
 
 </Note>
 
@@ -311,7 +311,7 @@ Not every change to a schema is a potentially breaking change. Additive changes 
 
 <Note>
 
-If you use the Apollo Router to [report operation metrics](../metrics/sending-operation-metrics), you can configure extended reference reporting for more accurate schema checks. [Learn more.](/router/configuration/overview/#extended-reference-reporting)
+If you use the GraphOS Router to [report operation metrics](../metrics/sending-operation-metrics), you can configure extended reference reporting for more accurate schema checks. [Learn more.](/router/configuration/overview/#extended-reference-reporting)
 
 </Note>
 
@@ -411,9 +411,9 @@ Operation checks will run against a maximum of 10,000 distinct operations. A war
 
 <Note>
 
-The input field usage limitation applies to reporting metrics from Apollo Server and older versions of the Apollo Router.
+The input field usage limitation applies to reporting metrics from Apollo Server and older versions of the Apollo Router Core.
 
-If you use the Apollo Router to [report operation metrics](../metrics/sending-operation-metrics), you can configure [enhanced operation signature normalization](/router/configuration/overview/#enhanced-operation-signature-normalization) and [extended reference reporting](/router/configuration/overview/#extended-reference-reporting) to track input field usage.
+If you use the GraphOS Router to [report operation metrics](../metrics/sending-operation-metrics), you can configure [enhanced operation signature normalization](/router/configuration/overview/#enhanced-operation-signature-normalization) and [extended reference reporting](/router/configuration/overview/#extended-reference-reporting) to track input field usage.
 
 </Note>
 
