--- a/src/content/graphos/metrics/field-usage.mdx
+++ b/src/content/graphos/metrics/field-usage.mdx
@@ -87,7 +87,7 @@ enum InventoryStatus {
 
 Only enterprise organizations can view usage metrics on `UserInput.name`, `UserInput.email`, etc., or `InventoryStatus.IN_STOCK`, `InventoryStatus.OUT_OF_STOCK`, etc.
 
-To access input and enum field metrics you must use the Apollo Router to [report metrics](./sending-operation-metrics) and configure [extended reference reporting](/router/configuration/overview/#extended-reference-reporting) in your router.
+To access input and enum field metrics you must use the GraphOS Router to [report metrics](./sending-operation-metrics) and configure [extended reference reporting](/router/configuration/overview/#extended-reference-reporting) in your router.
 
 <Note>
 
