--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -80,7 +80,7 @@ When **Contributor**s in an organization create a new graph, they are automatica
 
 <Note>
 
-1. When you [report metrics from Apollo Router or Apollo Server](../metrics/sending-operation-metrics/#from-the-apollo-router-or-apollo-server)
+1. When you [report metrics from GraphOS Router or Apollo Server](../metrics/sending-operation-metrics/#from-graphos-router-or-apollo-server)
    you should use a graph API key. For non-protected variants, the [graph API key role](#graph-api-key-roles)
    must be Contributor, Org Admin, or Graph Admin. For [protected variants](/graphos/graphs/management/#protected-variants-enterprise-only),
    only Org and Graph Admin roles can report metrics.
