--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -15,9 +15,9 @@ GraphOS Studio offers visualizations of metrics like request rate, latency, and 
 
 ## Reporting operation metrics
 
-How you report operation metrics to GraphOS depends on whether you're [using the GraphOS Router or Apollo Server](#from-the-apollo-router-or-apollo-server) or whether you're [using a third-party server](#from-a-third-party-server-advanced).
+How you report operation metrics to GraphOS depends on whether you're [using the GraphOS Router or Apollo Server](#from-graphos-router-or-apollo-server) or whether you're [using a third-party server](#from-a-third-party-server-advanced).
 
-### From the GraphOS Router or Apollo Server
+### From GraphOS Router or Apollo Server
 
 Both the GraphOS Router and Apollo Server use the same mechanism to enable operation metrics reporting to GraphOS:
 
@@ -48,9 +48,9 @@ Consult your production environment's documentation to learn how to set its envi
 
 Now, when your router or server starts up, it automatically begins reporting operation metrics to GraphOS.
 
-#### Enhanced reporting with the Apollo Router
+#### Enhanced reporting with the GraphOS Router
 
-If you use the Apollo Router to report operation metrics, you can configure [enhanced operation signature normalization](/router/configuration/overview/#enhanced-operation-signature-normalization) and [extended reference reporting](/router/configuration/overview/#extended-reference-reporting) for more comprehensive insights and operation checks.
+If you use the GraphOS Router to report operation metrics, you can configure [enhanced operation signature normalization](/router/configuration/overview/#enhanced-operation-signature-normalization) and [extended reference reporting](/router/configuration/overview/#extended-reference-reporting) for more comprehensive insights and operation checks.
 
 ### From a third-party server (advanced)
 
@@ -174,9 +174,9 @@ Your GraphQL router or server can report one or both of the following field usag
 
 How you report these metrics to GraphOS depends on whether you're using the [GraphOS Router](#from-the-graphos-router) or [Apollo Server](#from-apollo-server).
 
-### From the GraphOS Router
+### From GraphOS Router
 
-If you have a [cloud](/graphos/graphs#cloud-supergraphs) or [self-hosted supergraph](/graphos/graphs#self-hosted-supergraphs), you only need to configure your [router](/federation/building-supergraphs/router/) to [send operation metrics to GraphOS](#from-the-apollo-router-or-apollo-server), and field usage will be automatically reported. Subgraphs should not send any metrics to GraphOS directly. Instead, they can include [trace data](./operations#enabling-traces) in their responses to the router. The router then includes that data in its own reports to GraphOS.
+If you have a [cloud](/graphos/graphs#cloud-supergraphs) or [self-hosted supergraph](/graphos/graphs#self-hosted-supergraphs), you only need to configure your [router](/federation/building-supergraphs/router/) to [send operation metrics to GraphOS](#from-graphos-router-or-apollo-server), and field usage will be automatically reported. Subgraphs should not send any metrics to GraphOS directly. Instead, they can include [trace data](./operations#enabling-traces) in their responses to the router. The router then includes that data in its own reports to GraphOS.
 
 <Note>
 
@@ -188,7 +188,7 @@ Subgraphs send field tracing and error data to the router using the [federated t
 
 Apollo Server automatically reports field usage metrics as long as you follow these prerequisites:
 
-- You must first configure your server to [send operation metrics to GraphOS](#from-the-apollo-router-or-apollo-server).
+- You must first configure your server to [send operation metrics to GraphOS](#from-graphos-router-or-apollo-server).
 - To report requests:
 
   - Your GraphQL server must run Apollo Server 3.6 or later.
