--- a/src/content/graphos/enterprise/supergraph-architecture-framework/operational-excellence.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/operational-excellence.mdx
@@ -29,7 +29,7 @@ A clear understanding how the organization uses the supergraph to drive business
 
 ### Scale the supergraph
 
-GraphQL federation is a new concept for many organizations.
+GraphQL Federation is a new concept for many organizations.
 Teams must understand how they are a part of the supergraph, what parts they own, and how the supergraph is served.
 
 Tools like GraphOS's schema registry and schema checks can help teams understand how their subgraph fits into the supergraph, and how a graph router creates a consolidated graph for clients to consume.
