--- a/src/content/technotes/TN0043-using-graphql-for-abstraction.mdx
+++ b/src/content/technotes/TN0043-using-graphql-for-abstraction.mdx
@@ -200,4 +200,4 @@ GraphQL is a powerful tool for abstracting away the complexities of backend serv
 ## Further reading
 
 - [Using GraphQL and REST Together](/technotes/TN0044-graphql-and-rest-together/)
-- Blog post on xolv.io: [How to Move from BFFs to GraphQL federation](https://www.xolv.io/blog/articles/how-to-move-from-bffs-to-graphql-federation/)
+- Blog post on xolv.io: [How to Move from BFFs to GraphQL Federation](https://www.xolv.io/blog/articles/how-to-move-from-bffs-to-graphql-federation/)
