--- a/src/content/technotes/TN0009-gateway-performance.mdx
+++ b/src/content/technotes/TN0009-gateway-performance.mdx
@@ -11,7 +11,7 @@ If your supergraph gateway uses Apollo Server with the `@apollo/gateway` library
 
 ## Consider moving to the GraphOS Router
 
-The GraphOS Router is a high-throughput, low-latency GraphQL federation gateway written in Rust. Its performance and consistency significantly exceed any Node.js-based gateway.
+The GraphOS Router is a high-throughput, low-latency GraphQL Federation gateway written in Rust. Its performance and consistency significantly exceed any Node.js-based gateway.
 
 [Migrating to GraphOS Router from `@apollo/gateway`](/router/migrating-from-gateway)
 
